app/deploy/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnative-webapp
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
  
      containers:
       - name: web-container
         image: __IMAGE_FULL_URL__
         ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myapp
